--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,11 @@ repos:
   rev: 22.10.0
   hooks:
     - id: black
-      language_version: python3.8
+      name: "Black formatting"
+      language: system
+      types: [file, python]
+      entry: "black"
+      args: [--safe, "--line-length=79"]
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.3.0
   hooks:
@@ -21,4 +25,8 @@ repos:
   hooks:
     - id: flake8
       language_version: python3.8
+- repo: https://github.com/pre-commit/mirrors-autopep8
+  rev: v2.0.0
+  hooks:
+    - id: autopep8
 
