--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
     - numpy
     - matplotlib
     - plotly
-    - scikit-learn
+    - scikit-learn==1.1.3
     - torch
     - ipykernel
     - openpyxl
