--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,10 @@ repos:
     rev: v2.2.0
     hooks:
     - id: seed-isort-config
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.10.1
-    hooks:
-    - id: isort
+# -   repo: https://github.com/pre-commit/mirrors-isort
+#     rev: v5.10.1
+#     hooks:
+#     - id: isort
 - repo: https://github.com/ambv/black
   rev: 22.10.0
   hooks:
@@ -17,11 +17,11 @@ repos:
       entry: "black"
       args: [--safe, "--line-length=79"]
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.3.0
+  rev: v4.4.0
   hooks:
     - id: check-docstring-first
 - repo: https://github.com/PyCQA/flake8
-  rev: 5.0.4
+  rev: 6.0.0
   hooks:
     - id: flake8
       language_version: python3.8
