--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,10 @@ repos:
     rev: v2.2.0
     hooks:
     - id: seed-isort-config
-# -   repo: https://github.com/pre-commit/mirrors-isort
-#     rev: v5.10.1
-#     hooks:
-#     - id: isort
+-   repo: https://github.com/pre-commit/mirrors-isort
+    rev: v5.10.1
+    hooks:
+    - id: isort
 - repo: https://github.com/ambv/black
   rev: 22.10.0
   hooks:
