--- a/app/.streamlit/config.toml
+++ b/app/.streamlit/config.toml
@@ -3,5 +3,5 @@ base="light"
 primaryColor="#F63366"
 backgroundColor="#FFFFFF"
 secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
+textColor="#FFFFFF"
 font="sans serif"
